--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ecommerce",
-  "homepage": "https://19mddil.github.io/ecommerce",
+  "homepage": "https://19mddil.github.io/ecommerce/#",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
